fixed collapsing hover bug

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -86,6 +86,10 @@ a:hover {
     padding-left: 4em;
 }
 
+.collapsing a:hover{
+    border: none;
+}
+
 .in a:hover {
     border: none;
 }
